Fix/Correcion de overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Barlow Semi Condensed", sans-serif;
-
+  overflow-x: hidden;
 }
 
 :root{
